tests/sema/bad/20_pure_uses_signal.sg
@pure fn f() -> int {
  return s;   // using signal in pure context
}
signal s = 1;
